# Rich-Lion

./: Cargo.toml  Dockerfile  README.md  Rocket.toml  TODO.md  docker-compose.yaml  example.env
src/: endpoints.rs  lib.rs  main.rs
src/binance_connector/: mod.rs
src/db/: mod.rs
src/models/: mod.rs
