[package]
name = "coinloan_test"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
postgres-types = { version = "0.1.1", features = ["derive"] }
rand = "0.7"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json"]
